--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/6ZOZwUQKu3E?si=420xYfC9uOV_kSo3" title="Official trailer The Devil Wears Prada" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+<title> Stuff </title>
 
+    <p> Dit is een scene uit de film. Miranda (Meryl Streep) geeft een speech wanneer Andrea (Anna Hathaway) de kleding in de ruimte "a pile of stuff" noemt. Miranada is beledigd en er volgt een van de meest iconische scene's uit de film. </p>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Ja2fgquYTCg?si=kyBLgO03O7o70WZ3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    
 </body>
 </html>
